--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </table>
                 <article>
                     <header>
-                        <p>top Barca players</p>
+                        <p>Top Barca players</p>
                         <ol type="I">
                             <li>Messi</li>
                             <li>Neymar</li>
@@ -41,6 +41,14 @@
                             <li>Marcelo</li>
                             <li>Benzema</li>
                         </ul>
+                        <form method="GET" action="">
+                            <fieldset>
+                                <label for="name">Name</label>
+                                <input id="name" type="text" required>
+                                <br>
+                                <label for="email">Email:</label>
+                                <input type="email" id="email" required>
+                            </fieldset>
                     </header>
                 </article>
             </header>
@@ -49,7 +57,6 @@
                 <a href="home">Home</a>
                 <a href="message">message</a>
             </footer>
-            
         </article>
     </body>
 </html>
