--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>homework02</title>
     </head>
     <body>
         <article>
             <header>
                 <h1>zagolovok saytu</h1>
                 <p>abzacuk</p>
-                <p2>second abzacuk</p2>
+                <p>second abzacuk</p>
                 <table border=1>
                     <tr>
                     <td rowspan="1">name</td>
@@ -27,8 +27,6 @@
                     <td colspan="3">185mln</td>    
                     </tr>
                 </table>
-                <article>
-                    <header>
                         <p>Top Barca players</p>
                         <ol type="I">
                             <li>Messi</li>
@@ -49,8 +47,6 @@
                                 <label for="email">Email:</label>
                                 <input type="email" id="email" required>
                             </fieldset>
-                    </header>
-                </article>
             </header>
             <footer>
                 <p>abzacuk znuzy</p>
