--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li>Marcelo</li>
                             <li>Benzema</li>
                         </ul>
-                        <form method="GET" action="">
+                        <form method="GET" action="blabla.com">
                             <fieldset>
                                 <label for="name">Name</label>
                                 <input id="name" type="text" required>
@@ -47,6 +47,7 @@
                                 <label for="email">Email:</label>
                                 <input type="email" id="email" required>
                             </fieldset>
+                            </form>
             </header>
             <footer>
                 <p>abzacuk znuzy</p>
