--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <h1>zagolovok saytu</h1>
                 <p>abzacuk</p>
                 <p>second abzacuk</p>
-                <table border=1>
+                <table>
                     <tr>
                     <td rowspan="1">name</td>
                     <td rowspan="1">price</td>
@@ -34,7 +34,7 @@
                             <li>Suarez</li>
                         </ol>
                         <p>Top Real players</p>
-                        <ul type="circle">
+                        <ul>
                             <li>Ronaldo</li>
                             <li>Marcelo</li>
                             <li>Benzema</li>
